--- a/css/styles.css
+++ b/css/styles.css
@@ -575,6 +575,13 @@ span.searchBtn:hover {
 
 .imgContainer {
   text-align: center;
+  max-width: 460px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.content img {
+  width: 100%
 }
 
 .book div.cardContainer .imgContainer {
@@ -1368,13 +1375,7 @@ p.name a:hover {
   width: 75%;
   margin-left: auto;
   margin-right: auto;
+  padding: 50px 0;
 }
 
-.content img {
-  width: 100%
-}
-
-.content p {
-  margin-bottom: 50px;
-}
 
